# TwinPlayerBot

./: .env.example  .gitignore  Player.py  QueuePlayer.py  app_config.py  docker-compose.yml  main.py  pyproject.toml  test.py
Bot/: TGBot.py  create_bot.py
DB/: database.py  models.py
TS5_container/: Dockerfile  docker-compose.yml
migration/: env.py
migration/versions/: 24243d88cb8b_initial_revision.py
