[tool.poetry]
name = "twinplayerbot"
version = "0.1.0"
description = ""
authors = ["Sergey Popov <y.sergey.popov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.47.0"
django-environ = "^0.11.2"
aiogram = "^3.13.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
